fixed default z-index for most components, open link api is more generic

--- a/db-api-generator/src/main/frontend/components/SmartDialog/TS_Dialog2.scss
+++ b/db-api-generator/src/main/frontend/components/SmartDialog/TS_Dialog2.scss
@@ -29,7 +29,6 @@
   border-radius: 8px;
   width: 500px;
   height: 300px;
-  user-select: none;
 
   .ts-dialog__title {
     width: 100%;
