--- a/thunderstorm/src/main/frontend/components/TS_Dialog/TS_DialogOverlay.scss
+++ b/thunderstorm/src/main/frontend/components/TS_Dialog/TS_DialogOverlay.scss
@@ -26,13 +26,13 @@
   .ts-overlay {
     @extend %match_parent;
     @extend %ll_h_c;
-    z-index: 100;
+    z-index: 200;
     background: #00000020;
     justify-content: center;
     align-items: center;
   }
 
   .ts-overlay__child {
-    z-index: 101;
+    z-index: 201;
   }
 }
